<resources>
    <string name="app_name">CHEW</string>
    <string name="gallery_act">Yummy Snack Gallery</string>
    <string name="favor_snack_act">Favorite Snacks</string>
    <string name="shoplist_act">Snack Shopping List</string>
    <string name="tips_act">Healthy Snacking Tips</string>
    <string name="choose_member_act">Choose a Family Member</string>
    <string name="produce_act">Buy Produce</string>
    <string name="help_act">Help</string>
    <string name="add_vouchers_act">Add Vouchers</string>
    <string name="del_vouchers_act">Delete Vouchers</string>
    <string name="profile_act">Family Member</string>
    <string name="choose_vouch_act">Choose Voucher</string>
    <string name="regular_act">Regular Voucher: Shopping Cart</string>
    <string name="cash_act">Cash Voucher: Shopping Cart</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="name">Name:</string>
    <string name="month">Month:</string>
    <string name="ethnicity">Ethnicity:</string>
    <string name="vouchers_title">Your Family\'s Vouchers</string>
    <string name="vouchers">Vouchers:</string>
    <string name="which_store">Which store are you in?</string>
    <string name="which_vouchers">Which vouchers will you use today?</string>
    <string name="want_to_get">Do you want to get this item?</string>
    <string name="cannot_get">Not WIC item</string>
    <string name="select_wic_appr">Sorry, this product is not a WIC approved item</string>
    <string name="no_matching_voucher">Not allowed on this voucher</string>
    <string name="choose_voucher_matching_product">Sorry, this product is not on this person\'s WIC voucher</string>
    <string name="scan_for_member">Scan Item for this Person</string>
    <string name="what_can_get">What\'s on Voucher?</string>
    <string name="in_cart_regular">Regular Voucher: View Shopping Cart</string>
    <string name="in_cart_cash">Cash Voucher: View Shopping Cart</string>
    <string name="warning">WARNING! Many foods can be choking hazards for preschool-age children. Cut hard food into very thin, bite-size pieces before serving. Encourage your child to sit and chew their food well while under your watch.</string>
    <string name="set_favorite">Set as Favorite!</string>
    <string name="unset_favorite">Remove as Favorite</string>
    <string name="set_favorite_toast">Recipe is now a Favorite!</string>
    <string name="unset_favorite_toast">Recipe is no longer a Favorite</string>
    <string name="problem">There was a problem</string>
    <string name="add_to_shopping">Add to Shopping List!</string>
    <string name="ingredients_added_toast">Ingredients were added to your shopping list</string>
    <string name="ingredients">What You\'ll Need:</string>
    <string name="steps">Steps:</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="ready_to_shop">You are now ready to use your vouchers!</string>
    <string name="vouchers_uploaded_msg">Vouchers were successfully added</string>
    <string name="delete_item">Delete this item?</string>
    <string name="deleted_success_msg">Item successfully deleted</string>
    <string name="select_delete_quantity">Select number to be deleted</string>
    <string name="spent">Amount Spent:</string>
    <string name="left">Amount Left:</string>
    <string name="calc_price">Calculate Price per Pound</string>
    <string name="cost_limit">Cost is Over the Limit for</string>
    <string name="choose_member">Chose a Family Member:</string>
    <string name="choose_members">Choose which vouchers you want to use to buy this item. Then choose how many.</string>
    <string name="enter_produce">Enter Produce Name:</string>
    <string name="enter_price_$">Enter Price per Item:</string>
    <string name="enter_price">Enter the Price</string>
    <string name="select_quantity">Select # of items:</string>
    <string name="clear_shop_list">Clear Shopping List</string>
    <string name="calculator_title">Cash Value Voucher Calculators</string>
    <string name="caclulator_instructions1">Use these tools to calculate how much fruits and vegetables you can buy with each cash voucher.</string>
    <string name="caclulator_instructions2">Produce may be bought loose or in a package, fresh or frozen. Pick which type of fruit or vegetables you want to buy for the right calculator tool.</string>
    <string name="cash_vs_inuse">Cash Vouchers in use</string>
    <string name="packaged_fresh">Packaged Fresh</string>
    <string name="packaged_frozen">Packaged Frozen</string>
    <string name="cash_not_found">Not found in database. Please enter name of packaged fruit/vegetable item.</string>
    <string name="packaged_manual2">REMEMBER: Must not have added sugars, fats, oils, herbs or spices.</string>
    <string name="loose_price_per_pound">Loose Produce: Price per Pound</string>
    <string name="loose_price_per_item">Loose Produce: Price per Item</string>
    <string name="wheel_intro1">Weigh the produce on the scale.</string>
    <string name="wheel_intro2">Then choose weight in pounds.</string>
    <string name="produce_name">Enter Produce Name:</string>
    <string name="price_per_pound">Price per Pound: $</string>
    <string name="dollar_sign">$</string>
    <string name="ounces">oz</string>
    <string name="quantity">How many?</string>
    <string name="done_shop">Done Shopping?</string>
    <string name="sure_done_shop_title">Are you sure want to end this WIC shopping trip?</string>
    <string name="sure_done_shop_msg">All vouchers selected today will be marked as USED.</string>
    <string name="confirm_done_shop">This shopping trip is now closed. All vouchers from this trip were marked as USED.</string>
    <string name="enter_pwd">Please Enter Password</string>
    <string name="wrong_pwd">Wrong Password</string>
    <string name="pwd">Password:</string>
    <string name="vcode">Voucher Code:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="sure_want_delete">Are you sure you want to delete this voucher?</string>
    <string name="cannot_get_product">You cannot get</string>
    <string name="because_already_bought">because you bought</string>
    <string name="want_to_replace">Do you want to replace it? All choices of</string>
    <string name="will_be_deleted">will be DELETED.</string>
    <string name="exception_case">buttermilk and/or evaporated milk and/or tofu</string>
    <string name="cannot_get_anymore">You cannot get anymore of</string>
    <string name="on_this_voucher">on this voucher</string>
    <string name="not_cash">This is not a CASH item!</string>
    <string name="not_used">not used</string>
    <string name="in_use">in use</string>
    <string name="used">used</string>
    <string name="voucher_status">Status:</string>
    <string name="cv_not_selected">Please select a CASH voucher for this shopping trip!</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="juice_46_48oz">46&#8211;48oz juice</string>
    <string name="tuna_5oz">5oz tuna</string>
    <string name="juice_64oz">64oz juice</string>
    <string name="tuna_6oz">6oz tuna</string>
    <string name="buttermilk">buttermilk</string>
    <string name="can_beans">canned beans</string>
    <string name="cereal">cereal</string>
    <string name="cheese">cheese</string>
    <string name="dried_beans_peas">dried beans/peas</string>
    <string name="eggs">eggs</string>
    <string name="evap_milk">evaporated milk</string>
    <string name="frozen_juice">frozen juice</string>
    <string name="milk">low fat milk</string>
    <string name="nonfat_dry_milk">nonfat dry milk</string>
    <string name="peanut_b">peanut butter</string>
    <string name="salmon">salmon</string>
    <string name="sardines">sardines</string>
    <string name="tofu">tofu</string>
    <string name="whole_grain_prod">whole grain products</string>
    <string name="whole_milk">whole milk</string>
    <string name="cash_produce">PRODUCE (Cash Voucher)</string>
    <string name="dairy">DAIRY</string>
    <string name="fruit_veg">FRUITS &amp; VEGETABLES</string>
    <string name="grains">GRAINS</string>
    <string name="protein">PROTEIN</string>
    <string name="peach_banana">Peach Banana Drink</string>
    <string name="slice_up">Banana Slice Up</string>
    <string name="ice_cream">Banana Ice Cream</string>
    <string name="crunchers">Banana Crunches</string>
    <string name="cin_apples">Cinnamon Apples</string>
    <string name="app_quesadilla">Apple Quesadilla</string>
    <string name="grape_dunkers">Grape Dunkers</string>
    <string name="sunshine">Sunshine Smoothie</string>
    <string name="strawberry_dippers">Strawberry Dippers</string>
    <string name="strawberry_freezers">Strawberry Freezers</string>
    <string name="smashwich">Smash-wich</string>
    <string name="sweet_carrot">Sweet Carrots</string>
    <string name="carrot_slaw">Carrot Slaw</string>
    <string name="salsa">Salsa</string>
    <string name="green_bean">Cheesy Green Beans</string>
    <string name="cuke_sandwich">Cucumber Sandwich</string>
    <string name="sushi">Kid Sushi</string>
    <string name="slushy">Fruit Slushy</string>
    <string name="scramble">Egg Scramble</string>
    <string name="guacamole">Guacamole</string>
    <string name="toast">Avacado Toast</string>
    <string name="filled_avo">Filled Avacados</string>
    <string name="chayote_salad">Chayote Salad</string>
    <string name="monster_smoothie">Monster Smoothie</string>
    <string name="mango_salsa">Mango Salsa</string>
    <string name="mango_parfait">Mango Parfait</string>
    <string name="tropical_fruit_mix">Tropical Fruit Mix</string>
    <string name="pear_fries">Pear "Fries"</string>
    <string name="fruit_jumble">Fruit Jumble</string>
    <string name="veg_quesadilla">Veggie Quesadilla</string>
    <string name="sweet_potato_smash">Sweet Potato Smash</string>
    <string name="butternut">Butternut Smash</string>
    <string name="fast_greens">Fast Greens</string>
    <string name="veggie_boats">Veggie Boats</string>
    <string name="fruity_faces">Funny Faces</string>
    <string name="bananas">bananas</string>
    <string name="peaches">peaches</string>
    <string name="low_fat_yogurt">low-fat yogurt</string>
    <string name="low_fat_skim_milk">low-fat or skim milk</string>
    <string name="whole_grain_cereal">whole grain cereal</string>
    <string name="apple">Apple</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="whole_wheat_tortilla">whole-wheat tortilla</string>
    <string name="low_fat_cheese">low-fat cheese</string>
    <string name="grapes">grapes</string>
    <string name="orange_juice">orange juice</string>
    <string name="banana">banana</string>
    <string name="strawberries">strawberries</string>
    <string name="low_fat_milk">low-fat milk</string>
    <string name="straw_or_ban">strawberries or bananas</string>
    <string name="whole_wheat_bread">whole-wheat bread</string>
    <string name="peanut_butter">peanut butter</string>
    <string name="carrots">carrots</string>
    <string name="apples">apples</string>
    <string name="tomatoes">tomatoes</string>
    <string name="lime_juice">lime juice</string>
    <string name="spices">spices</string>
</resources>