<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightgray"
    tools:context=".VoucherUpload" >

    <LinearLayout
        android:id="@+id/lin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dip" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1"
        android:orientation="horizontal"
        android:paddingLeft="10dip" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month" />

        <Spinner
            android:id="@+id/month_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@array/months" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2"
        android:orientation="horizontal"
        android:paddingLeft="10dip" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ethnicity" />

        <Spinner
            android:id="@+id/ethnicity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@array/ethnicities" />
    </LinearLayout>

</RelativeLayout>