<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_selector"
    android:paddingLeft="8dp"
    android:paddingRight="8dp" >

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/vcode"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/voucherCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Voucher"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:layout_below="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/name"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:layout_below="@+id/l2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/month"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Month"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:layout_below="@+id/l3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" >

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:text="@string/ethnicity"
            android:textIsSelectable="false"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ethnicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ethnicity"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginBottom="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/delete"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15sp"
        android:layout_marginTop="3dp"
        android:background="@drawable/button_selector"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:onClick="delete"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textStyle="bold" />

</RelativeLayout>